# BD2

./: .gitignore  pyproject.toml  requirements.txt
project/: __init__.py  app.py  models.py
project/db/: __init__.py  database.py  models.py
project/forms/: __init__.py  auth_forms.py  infrastructure_forms.py  inspections_forms.py  repair_forms.py  reports_forms.py  service_form.py
project/models/: infrastruktura.py  monitoring.py  naprawy.py  przeglady.py
project/routes/: __init__.py  auth.py  index.py  infrastructure.py  inspections.py  inspections_api.py  inspections_ui.py  manage_inspections.py  repairs.py  reports.py  service.py
project/static/css/: infrastructure.css  inspections.css  main-site.css  repairs.css  reports.css  services.css  styles.css  user_managment.css
project/static/js/: forms.js  inspections.js
project/templates/: auth.html  error.html  index.html  inspection_causes.html  inspection_requests.html  inspection_types.html  inspections.html  inspections_root.html  login.html  register.html  role.html
project/templates/auth/: auth.html  create_role.html  login.html  register.html  role.html
project/templates/infrastructure/: create_element.html  create_location.html  create_object.html  create_status.html  create_type.html  infrastructure.html  locations.html  objects.html  statuses.html  types.html
project/templates/inspections/: form_causes.html  form_inspections.html  form_requests.html  form_types.html  inspection_causes.html  inspections.html  (+4 more)
project/utils/: __init__.py  decorators.py
tests/: create_admin.py  test_insert.py
(+17 files in other folders)
