[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.scripts]
app = 'project:cli'

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.30"
python-dotenv = "^1.0.1"
structlog = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
