[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.scripts]
app = 'project:app:cli'

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.30"
structlog = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
